# matabstrix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  configure  index.js  main.cpp
cmake/Modules/: FindSTB.cmake
data/models/: untitled.raw
data/shaders/: fragment.glsl  normal.frag  textured.vert  vertex.glsl
data/shaders/textured/: attrib.txt  vertex.glsl
examples/: CMakeLists.txt  main.cpp
examples/demo/: CMakeLists.txt  main.cpp
examples/demo/data/materials/: bunny.mtl  car.mtl  protagonist.mtl  suzanne.mtl  teapot.mtl
examples/demo/data/models/: untitled.raw
examples/demo/data/shaders/: normal.vert  textured.vert
src/: CMakeLists.txt  camera.cpp  camera.hpp  executable.cpp  executable.hpp  gl.hpp  main.cpp  main.hpp  material.cpp  material.hpp  mesh.hpp  model.cpp  model.hpp  mtllib.cpp  mtllib.hpp  object.cpp  object.hpp  program.cpp  program.hpp  resource.hpp  scene.hpp  shader.cpp  shader.hpp  stb.cpp  store.hpp  texture.cpp  texture.hpp  textured_mesh.hpp  transformation.cpp  transformation.hpp
src/adapters/: adapter.hpp
src/light/: light.hpp
src/lights/: sun.hpp
src/mesh/: mesh.hpp  textured.hpp
src/meshes/: mesh.cpp  mesh.hpp  textured.cpp  textured.hpp
src/model/: model.cpp  model.hpp  raw.cpp  raw.hpp  static.cpp  static.hpp
src/models/: model.cpp  model.hpp  raw.cpp  raw.hpp  static.cpp  static.hpp
src/object/: object.hpp  with_model.hpp
src/objects/: with_model.cpp  with_model.hpp
work/: teapot.blend
